# opendog_robot

./: LICENSE  README.md
opendog_description/: CMakeLists.txt  package.xml
opendog_description/config/: opendog.rviz
opendog_description/launch/: test_opendog_description.launch
opendog_description/meshes/: body.dae  hip.dae  left_upper_leg.dae  lower_leg.dae  right_upper_leg.dae
opendog_description/urdf/: leg_mechanism.xacro  opendog.urdf.xacro
opendog_robot/: CMakeLists.txt  LICENSE  package.xml
