<?xml version="1.0"?>
<package format="2">
  <name>opendog_description</name>
  <version>0.0.0</version>
  <description>The opendog_description package</description>

  <maintainer email="ian@ianthe.engineer">Ian McMahon</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

</package>
